# NewCompression

./: CMakeLists.txt  README.md  compare.cpp  main.cpp
src/: ArithmeticCoder.h  CompressionConfig.h  FileReader.h  FileWriter.h  Fitter.h  FloatCompressor.h  Huffman.c  Huffman.h  Type.h
src/SevenMethods/: CompressionConfig.h  Type.h
